--- a/RUPassReset/RUPassReset.csproj
+++ b/RUPassReset/RUPassReset.csproj
@@ -185,10 +185,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Service\Models\Password\ChangePasswordModel.cs" />
+    <Compile Include="Service\Models\Password\ChangePassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\Models\Password\ForgotPasswordModel.cs" />
-    <Compile Include="Service\Models\Password\PasswordModel.cs" />
+    <Compile Include="Service\Models\Password\Password.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap.min.css" />
@@ -298,6 +297,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Service\ServiceModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
