--- a/RUPassReset/RUPassReset.csproj
+++ b/RUPassReset/RUPassReset.csproj
@@ -185,9 +185,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Service\EmailService.cs" />
     <Compile Include="Service\Models\Password\ChangePassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Models\Password\Password.cs" />
+    <Compile Include="Service\ServiceModels\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap.min.css" />
@@ -297,7 +299,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Service\ServiceModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
