--- a/RUPassReset/RUPassReset.csproj
+++ b/RUPassReset/RUPassReset.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Service\Models\Password\ChangePassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Models\Password\Password.cs" />
+    <Compile Include="Service\PasswordService.cs" />
     <Compile Include="Service\ServiceModels\User.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -294,8 +295,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Home\Forgot.cshtml" />
+    <Content Include="Views\Home\Reset.cshtml" />
     <Content Include="Views\Home\Change.cshtml" />
+    <Content Include="Views\Home\ResetEmailSent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
