--- a/RUPassReset/RUPassReset.csproj
+++ b/RUPassReset/RUPassReset.csproj
@@ -186,10 +186,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Service\EmailService.cs" />
+    <Compile Include="Service\Models\PasswordRecoveryMap.cs" />
     <Compile Include="Service\Models\Password\ChangePassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Models\Password\Password.cs" />
+    <Compile Include="Service\Models\PasswordRecovery.cs" />
     <Compile Include="Service\PasswordService.cs" />
+    <Compile Include="Service\Repository\PasswordRecoveryDataContext.cs" />
     <Compile Include="Service\ServiceModels\User.cs" />
   </ItemGroup>
   <ItemGroup>
