--- a/RUPassReset/Web.config
+++ b/RUPassReset/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-RUPassReset-20131222000111;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-RUPassReset-20131222000111.mdf" providerName="System.Data.SqlClient" />
+		<add name="PasswordRecoveryDataContext" providerName="System.Data.SqlClient" connectionString="Data Source=sql.dev.nem.ru.is;Initial Catalog=IT_PasswordReset;Persist Security Info=True;User ID=centris_user;Password=suntour123" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
