--- a/RUPassReset/RUPassReset.csproj
+++ b/RUPassReset/RUPassReset.csproj
@@ -185,15 +185,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Service\DBModels\People.cs" />
+    <Compile Include="Service\DBModels\User.cs" />
+    <Compile Include="Service\DBModels\UserMap.cs" />
     <Compile Include="Service\EmailService.cs" />
-    <Compile Include="Service\Models\PasswordRecoveryMap.cs" />
-    <Compile Include="Service\Models\Password\ChangePassword.cs" />
+    <Compile Include="Service\DBModels\PasswordRecoveryMap.cs" />
+    <Compile Include="Service\Repositories\MyschoolDataContext.cs" />
+    <Compile Include="Service\ServiceModels\ChangePassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\Models\Password\Password.cs" />
-    <Compile Include="Service\Models\PasswordRecovery.cs" />
+    <Compile Include="Service\ServiceModels\Password.cs" />
+    <Compile Include="Service\DBModels\PasswordRecovery.cs" />
     <Compile Include="Service\PasswordService.cs" />
-    <Compile Include="Service\Repository\PasswordRecoveryDataContext.cs" />
-    <Compile Include="Service\ServiceModels\User.cs" />
+    <Compile Include="Service\Repositories\PasswordRecoveryDataContext.cs" />
+    <Compile Include="Service\UserNotFoundException.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap.min.css" />
@@ -272,7 +276,9 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
