--- a/RUPassReset/Web.config
+++ b/RUPassReset/Web.config
@@ -13,7 +13,8 @@
 		minimumPasswordLength="6"
 		tokenSize="64"
 		tokenLifeTime="3"
-		resetURL="http://localhost:1291/verify?token="
+		resetURL="http://localhost:1291"
+		verifyTokenURL="http://localhost:1291/verify?token="
 		fromEmailAddress="no-reply@ru.is"
 		smtpEmailServer="smtp.ru.is"
 	/>
