--- a/RUPassReset/Web.config
+++ b/RUPassReset/Web.config
@@ -10,7 +10,8 @@
 		<section name="RUPassResetConfig" type="RUPassReset.Configuration.RUPassResetConfig, RUPassReset"/>
 	</configSections>
 	<RUPassResetConfig
-		minimumPasswordLength="6"
+		maxAttempts="3"
+		minimumPasswordLength="8"
 		tokenSize="64"
 		tokenLifeTime="3"
 		resetURL="http://localhost:1291"
