--- a/RUPassReset/Web.config
+++ b/RUPassReset/Web.config
@@ -11,6 +11,7 @@
 	</configSections>
 	<RUPassResetConfig
 		maxAttempts="3"
+		maxAttemptsGagTime="24"
 		minimumPasswordLength="8"
 		tokenSize="64"
 		tokenLifeTime="3"
