moving AD config to webconfig

--- a/RUPassReset/Web.config
+++ b/RUPassReset/Web.config
@@ -19,6 +19,11 @@
 		verifyTokenURL="http://localhost:1291/verify?token="
 		fromEmailAddress="no-reply@ru.is"
 		smtpEmailServer="smtp.ru.is"
+		ADDomain="hirdc2.hir.is"
+		ADDefaultOU="OU=People,DC=hir,DC=is"
+		ADDefaultRootOU="DC=hir,DC=is"
+		ADServiceUser="PasswordReset-ldap"
+		ADServicePassword="iez4queev0Aruemeech6"
 	/>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-RUPassReset-20131222000111;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-RUPassReset-20131222000111.mdf" providerName="System.Data.SqlClient" />
