--- a/RUPassReset/RUPassReset.csproj
+++ b/RUPassReset/RUPassReset.csproj
@@ -205,7 +205,7 @@
     <Compile Include="Service\PasswordService.cs" />
     <Compile Include="Service\Repositories\PasswordRecoveryDataContext.cs" />
     <Compile Include="Service\Exceptions\UserNotFoundException.cs" />
-    <Compile Include="Service\ADHelperService.cs" />
+    <Compile Include="Service\Helpers\ADHelperService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap.min.css" />
@@ -214,7 +214,6 @@
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\jquery.inputmask.js" />
     <Content Include="Content\js\jquery.inputmask.regex.extensions.js" />
-    <Content Include="Content\js\jquery.maskedinput.min.js" />
     <Content Include="Content\js\site.js" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
