--- a/RUPassReset/RUPassReset.csproj
+++ b/RUPassReset/RUPassReset.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Service\Exceptions\IllegalTokenException.cs" />
     <Compile Include="Service\Exceptions\PasswordResetFailedException.cs" />
     <Compile Include="Service\Exceptions\TooManyTriesException.cs" />
+    <Compile Include="Service\Helpers\RegexUtilities.cs" />
     <Compile Include="Service\Repositories\MyschoolDataContext.cs" />
     <Compile Include="Service\ServiceModels\ChangePassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
